Added images, updated index and css

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>PJ Design</title>
 </head>
 
 <body>
@@ -39,25 +40,65 @@
         <div class="dark-cover">Welcome to my portfolio.</div>
     </div>
     <br>
-    <div class="img-container">
-        <div class="dark-cover">My name is</div>
-        <div class="dark-cover-name">Phillip Jones</div>
-        <div class="dark-cover">I am an aspiring full stack web developer.</div>
-        <div class="dark-cover">Welcome to my portfolio.</div>
+    <div class="container">
+        <h2 class="text-center text-secondary mb-3">Bio</h2>
+        <div class="col-12 border-top-secondary">
+            <img class="col-sm-12 col-md-7 col-lg-3 float-left" alt="Phillip Jones"
+                src="assets/images/Phillip_Jones.jpg">
+            <p class="text-secondary">My name is Phillip Jones and I live in Hendersonville, TN. I am currently in
+                my second year as a music educator teaching band, choir, and general music at Shafer Middle School
+                in Gallatin, TN. Through my love of music, I decided to become an educator to hopefully pass on the
+                love of music I have to the future generations. Students I have taught have gone on to make regional
+                honor bands, earn scholarships for summer music camps, and even earn scholarships to play music in
+                college. I LOVE marching band and I am very proud of the hard work of my current and past students.
+                Some of their accomplishments include making finals at Bands of America regional competitions, and
+                even winning Tennessee Division II State Champions two years in a row.<br><br>
+                My instrument of choice is Trombone, but I also play Euphonium and Tuba from time to time. I
+                have played with different professional groups such as the Intersection Music Ensemble and the
+                Nashville Opera. Of course, like a lot of musicians, I also consider guitar a hobby that I really
+                enjoy. I love metal music and it is what drove me to want to teach myself how to play guitar. It is
+                fulfilling for me to be able to play the music I enjoy even if I never play for an audience.<br><br>
+                Unfortunately, teaching is very stressful and it has taken away all of the joy I find in music.
+                Through talking with my wife, we decided that it would be a great time for me to rethink my career
+                decisions and I think that web development would be a great opportunity for me to not only feel
+                accomplished in the work I do, but to hopefully regain some of the love of music I have lost.</p>
+        </div>
     </div>
     <br>
-    <div class="img-container">
-        <div class="dark-cover">My name is</div>
-        <div class="dark-cover-name">Phillip Jones</div>
-        <div class="dark-cover">I am an aspiring full stack web developer.</div>
-        <div class="dark-cover">Welcome to my portfolio.</div>
-    </div>
-    <br>
-    <div class="img-container">
-        <div class="dark-cover">My name is</div>
-        <div class="dark-cover-name">Phillip Jones</div>
-        <div class="dark-cover">I am an aspiring full stack web developer.</div>
-        <div class="dark-cover">Welcome to my portfolio.</div>
+    <div class="container">
+        <h2 class="text-center text-secondary mb-3">Portfolio</h2>
+        <div class="row justify-content-center">
+            <div class="mx-5">
+                <img class="portfolioImg justify-content-center" src="assets/images/Got-Jobs.png">
+                <h3 class="text-center">Got Jobs?</h3>
+                <div class="row">
+                    <p>Deployed: <a href="https://ptj92e.github.io/GotJobs/">Got Jobs?</a></p>
+                </div>
+                <div class="row">
+                    <p>GitHub: <a href="https://github.com/ptj92e/GotJobs">Got Jobs?</a></p>
+                </div>
+            </div>
+            <div class="mx-5">
+                <img class="portfolioImg justify-content-center" src="assets/images/Weather.png">
+                <h3 class="text-center">Weather Dashboard</h3>
+                <div class="row">
+                    <p>Deployed: <a href="https://ptj92e.github.io/Weather-Dashboard/">Weather Dashboard</a></p>
+                </div>
+                <div class="row">
+                    <p>GitHub: <a href="https://github.com/ptj92e/Weather-Dashboard">Weather Dashboard</a></p>
+                </div>
+            </div>
+            <div class="mx-5">
+                <img class="portfolioImg justify-content-center" src="assets/images/Work.png">
+                <h3 class="text-center">Work Day Scheduler</h3>
+                <div class="row">
+                    <p>Deployed: <a href="https://ptj92e.github.io/To-Do-List/">Work Day Scheduler</a></p>
+                </div>
+                <div class="row">
+                    <p>GitHub: <a href="https://github.com/ptj92e/To-Do-List">Work Day Scheduler</a></p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
