--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <div class="container">
         <h2 class="text-center text-secondary mb-3">Portfolio</h2>
         <div class="row justify-content-center">
-            <div class="mx-5">
-                <img class="portfolioImg justify-content-center" src="assets/images/Got-Jobs.png">
+            <div class="mx-2 px-4">
+                <img class="portfolioImg mt-3 justify-content-center" src="assets/images/Got-Jobs.png">
                 <h3 class="text-center">Got Jobs?</h3>
                 <div class="row">
                     <p>Deployed: <a href="https://ptj92e.github.io/GotJobs/">Got Jobs?</a></p>
@@ -78,8 +78,8 @@
                     <p>GitHub: <a href="https://github.com/ptj92e/GotJobs">Got Jobs?</a></p>
                 </div>
             </div>
-            <div class="mx-5">
-                <img class="portfolioImg justify-content-center" src="assets/images/Weather.png">
+            <div class="mx-2 px-4">
+                <img class="portfolioImg mt-3 justify-content-center" src="assets/images/Weather.png">
                 <h3 class="text-center">Weather Dashboard</h3>
                 <div class="row">
                     <p>Deployed: <a href="https://ptj92e.github.io/Weather-Dashboard/">Weather Dashboard</a></p>
@@ -88,8 +88,8 @@
                     <p>GitHub: <a href="https://github.com/ptj92e/Weather-Dashboard">Weather Dashboard</a></p>
                 </div>
             </div>
-            <div class="mx-5">
-                <img class="portfolioImg justify-content-center" src="assets/images/Work.png">
+            <div class="mx-2 px-4">
+                <img class="portfolioImg mt-3 justify-content-center" src="assets/images/Work.png">
                 <h3 class="text-center">Work Day Scheduler</h3>
                 <div class="row">
                     <p>Deployed: <a href="https://ptj92e.github.io/To-Do-List/">Work Day Scheduler</a></p>
