Changed html and css

--- a/index.html
+++ b/index.html
@@ -25,22 +25,21 @@
                         <a class="nav-link ml-2 mr-2 text-secondary" href="#">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-secondary" href="#">Resume</a>
+                        <a class="nav-link text-secondary" href="#">Contact</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
     <br>
-
-    <div class="img-container">
+    <div class="container pl-0 pr-0 img-container">
         <div class="dark-cover">My name is</div>
         <div class="dark-cover-name">Phillip Jones</div>
         <div class="dark-cover">I am an aspiring full stack web developer.</div>
         <div class="dark-cover">Welcome to my portfolio.</div>
     </div>
     <br>
-    <div class="container">
+    <div class="container bioDiv">
         <h2 class="text-center text-secondary mb-3">Bio</h2>
         <div class="col-12 border-top-secondary">
             <img class="col-sm-12 col-md-7 col-lg-3 float-left" alt="Phillip Jones"
@@ -65,41 +64,75 @@
         </div>
     </div>
     <br>
-    <div class="container">
+    <div class="container portfolioDiv">
         <h2 class="text-center text-secondary mb-3">Portfolio</h2>
         <div class="row justify-content-center">
-            <div class="mx-2 px-4">
+            <div class="mx-2 px-4" id="portfolioItem">
                 <img class="portfolioImg mt-3 justify-content-center" src="assets/images/Got-Jobs.png">
                 <h3 class="text-center">Got Jobs?</h3>
-                <div class="row">
+                <div class="row justify-content-center">
                     <p>Deployed: <a href="https://ptj92e.github.io/GotJobs/">Got Jobs?</a></p>
                 </div>
-                <div class="row">
+                <div class="row justify-content-center">
                     <p>GitHub: <a href="https://github.com/ptj92e/GotJobs">Got Jobs?</a></p>
                 </div>
             </div>
-            <div class="mx-2 px-4">
+            <div class="mx-2 px-4" id="portfolioItem">
                 <img class="portfolioImg mt-3 justify-content-center" src="assets/images/Weather.png">
                 <h3 class="text-center">Weather Dashboard</h3>
-                <div class="row">
+                <div class="row justify-content-center">
                     <p>Deployed: <a href="https://ptj92e.github.io/Weather-Dashboard/">Weather Dashboard</a></p>
                 </div>
-                <div class="row">
+                <div class="row justify-content-center">
                     <p>GitHub: <a href="https://github.com/ptj92e/Weather-Dashboard">Weather Dashboard</a></p>
                 </div>
             </div>
-            <div class="mx-2 px-4">
+            <div class="mx-2 px-4" id="portfolioItem">
                 <img class="portfolioImg mt-3 justify-content-center" src="assets/images/Work.png">
                 <h3 class="text-center">Work Day Scheduler</h3>
-                <div class="row">
+                <div class="row justify-content-center">
                     <p>Deployed: <a href="https://ptj92e.github.io/To-Do-List/">Work Day Scheduler</a></p>
                 </div>
-                <div class="row">
+                <div class="row justify-content-center">
                     <p>GitHub: <a href="https://github.com/ptj92e/To-Do-List">Work Day Scheduler</a></p>
                 </div>
             </div>
         </div>
     </div>
+    <br>
+    <div class="container contactDiv">
+        <h2 class="text-center text-secondary mb-3">Portfolio</h2>
+        <div class="row justify-content-center">
+            <div class="mx-2 px-4" id="portfolioItem">
+                <h3 class="text-center">Resume</h3>
+                <div class="row justify-content-center">
+                    <p>Resume</p>
+                </div>
+            </div>
+            <div class="mx-2 px-4" id="portfolioItem">
+                <h3 class="text-center">Contact Mr</h3>
+                <div class="row justify-content-center">
+                    <p>E-Mail: <a>ptj92e@gmail.com</a></p>
+                </div>
+                <div class="row justify-content-center">
+                    <p>Phone: <a>615-477-2263</a></p>
+                </div>
+                <div class="row justify-content-center">
+                    <p>Address: 103 Hickory Way North Hendersonville, TN, 37075</p>
+                </div>
+            </div>
+            <div class="mx-2 px-4" id="portfolioItem">
+                <h3 class="text-center">Social Media</h3>
+                <div class="row justify-content-center">
+                    <p>Facebook: <a href="https://www.facebook.com/TrombonePhil92">Phillip Jones</a></p>
+                </div>
+                <div class="row justify-content-center">
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/phillip-jones-4122a7156/">Phillip Jones</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 
 </html>
