--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="dark-cover">Welcome to my portfolio.</div>
     </div>
     <br>
-    <div class="container bioDiv" hidden>
+    <div class="container bioDiv">
         <h2 class="text-center mb-3">Bio</h2>
         <div class="col-12 border-top-secondary">
             <img class="float-left mr-2" alt="Phillip Jones" id="profileImage" src="assets/images/Phillip_Jones.jpg">
@@ -69,7 +69,7 @@
         </div>
     </div>
     <br>
-    <div class="container portfolioDiv" hidden>
+    <div class="container portfolioDiv">
         <h2 class="text-center mb-3">Portfolio</h2>
         <div class="row justify-content-center">
             <div class="mx-2 mb-4 px-4 rounded" id="portfolioItem">
@@ -105,7 +105,7 @@
         </div>
     </div>
     <br>
-    <div class="container contactDiv" hidden>
+    <div class="container contactDiv">
         <h2 class="text-center mb-3">Contact</h2>
         <div class="row justify-content-center">
             <div class="mx-2 mb-4 px-4 rounded" id="contactItem">
