Getting closer on the page scroll

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg animated fadeInUp">
             <img class="navbar-brand p-0 m-0" src="assets/images/logo.png">
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
@@ -34,7 +34,7 @@
         </nav>
     </header>
     <br>
-    <div class="container pl-0 pr-0 img-container animated fadeInUp">
+    <div class="container pl-0 pr-0 img-container animated fadeInUp" id="welcome">
         <div class="dark-cover">My name is</div>
         <div class="dark-cover-name">Phillip Jones</div>
         <div class="dark-cover">I am an aspiring full stack web developer.</div>
@@ -44,7 +44,7 @@
     <div class="container bioDiv">
         <h2 class="text-center mb-3">Bio</h2>
         <div class="col-12 border-top-secondary">
-            <img class="float-left mr-2" alt="Phillip Jones" id="profileImage" src="assets/images/Phillip_Jones.jpg">
+            <img class="float-left mr-2 rounded" alt="Phillip Jones" id="profileImage" src="assets/images/Phillip_Jones.jpg">
             <p class="bioText">My name is Phillip Jones and I live in Hendersonville, TN. I am an aspiring full
                 stack web developer currently enrolled in the Vanderbilt Coding Bootcamp. My passion for web development
                 has come from over a decade of music education where I learned a strong work ethic and creative problem
