--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="container pl-0 pr-0 welcomeDiv animated fadeInUp" id="welcome">
         <div class="dark-cover">My name is</div>
         <div class="dark-cover-name">Phillip Jones</div>
-        <div class="dark-cover">I am an aspiring full stack web developer.</div>
+        <div class="dark-cover">I am a full stack web developer.</div>
         <div class="dark-cover">Welcome to my portfolio.</div>
     </div>
     <br>
@@ -47,25 +47,24 @@
         <h2 class="text-center mb-3">Bio</h2>
         <div class="col-12 border-top-secondary">
             <img class="float-left mr-2 rounded" alt="Phillip Jones" id="profileImage" src="assets/images/Phillip_Jones.jpg">
-            <p class="bioText">My name is Phillip Jones and I live in Hendersonville, TN. I am an aspiring full
+            <p class="bioText">My name is Phillip Jones and I live in Hendersonville, TN. I am a full
                 stack web developer currently enrolled in the Vanderbilt Coding Bootcamp. My passion for web development
                 has come from over a decade of music education where I learned a strong work ethic and creative problem
-                solving. I love music, but I am looking for a more consistent outlet for my creativity.<br><br>
+                solving. My motivation to code comes from a strong desire for learning and the daily challenge I will face.<br><br>
                 Prior to enrolling in the Vanderbilt Coding Bootcamp, I went to Middle Tennessee State University as a
-                Music Education Major and I am currently in my second full year as a Band Director. Being in education
-                has taught me how to break down situations, reassess them, and approach them with patience.</p>
+                Music Education Major and I am currently in my second full year as a Band Director. I am married to a wonderful wife who has supported me every step of this journey where I have discovered a strong, new passion.</p>
                 <h4 class="text-center">Skills Include</h4>
             <div class="row flex-row justify-content-center">
                 <ul>
                     <li>HTML</li>
-                    <li>CSS</li>
-                </ul>
-                <ul>
-                    <li>Bootstrap</li>
                     <li>Animate.CSS</li>
                 </ul>
                 <ul>
+                    <li>CSS</li>
                     <li>JavaScript</li>
+                </ul>
+                <ul>
+                    <li>Bootstrap</li>
                     <li>JQuery</li>
                 </ul>
             </div>
