Added contact imgaes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p class="bioText">My name is Phillip Jones and I live in Hendersonville, TN. I am a full
                 stack web developer currently enrolled in the Vanderbilt Coding Bootcamp. My passion for web development
                 has come from over a decade of music education where I learned a strong work ethic and creative problem
-                solving. My motivation to code comes from a strong desire for learning and the daily challenge I will face.<br><br>
+                solving. My motivation to code comes from a strong desire for learning and the daily opportunities I will be presented with to grow.<br><br>
                 Prior to enrolling in the Vanderbilt Coding Bootcamp, I went to Middle Tennessee State University as a
                 Music Education Major and I am currently in my second full year as a Band Director. I am married to a wonderful wife who has supported me every step of this journey where I have discovered a strong, new passion.</p>
                 <h4 class="text-center">Skills Include</h4>
@@ -75,7 +75,7 @@
         <h2 class="text-center mb-3">Portfolio</h2>
         <div class="row justify-content-center">
             <div class="mx-2 mb-4 px-4 rounded" id="portfolioItem">
-                <img class="portfolioImg mt-3 justify-content-center" src="assets/images/Got-Jobs.png">
+                <img class="portfolioImg rounded mt-3 justify-content-center" src="assets/images/Got-Jobs.png">
                 <h3 class="text-center">Got Jobs?</h3>
                 <div class="row justify-content-center">
                     <p>Deployed: <a href="https://ptj92e.github.io/GotJobs/">Got Jobs?</a></p>
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="mx-2 mb-4 px-4 rounded" id="portfolioItem">
-                <img class="portfolioImg mt-3 justify-content-center" src="assets/images/Weather.png">
+                <img class="portfolioImg rounded mt-3 justify-content-center" src="assets/images/Weather.png">
                 <h3 class="text-center">Weather Dashboard</h3>
                 <div class="row justify-content-center">
                     <p>Deployed: <a href="https://ptj92e.github.io/Weather-Dashboard/">Weather Dashboard</a></p>
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="mx-2 mb-4 px-4 rounded" id="portfolioItem">
-                <img class="portfolioImg mt-3 justify-content-center" src="assets/images/Work.png">
+                <img class="portfolioImg rounded mt-3 justify-content-center" src="assets/images/Work.png">
                 <h3 class="text-center">Work Day Scheduler</h3>
                 <div class="row justify-content-center">
                     <p>Deployed: <a href="https://ptj92e.github.io/To-Do-List/">Work Day Scheduler</a></p>
@@ -111,12 +111,14 @@
         <h2 class="text-center mb-3">Contact</h2>
         <div class="row justify-content-center">
             <div class="mx-2 mb-4 px-4 rounded" id="contactItem">
+                <img class="contactImg rounded mt-3 justify-content-center" src="assets/images/document.png">
                 <h3 class="text-center">Resume</h3>
                 <div class="row justify-content-center">
                     <p>Resume</p>
                 </div>
             </div>
             <div class="mx-2 mb-4 px-4 rounded" id="contactItem">
+                <img class="contactImg rounded mt-3 justify-content-center" src="assets/images/contact.jpeg">
                 <h3 class="text-center">Contact Me</h3>
                 <div class="row justify-content-center">
                     <p>E-Mail: <a>ptj92e@gmail.com</a></p>
@@ -129,6 +131,7 @@
                 </div>
             </div>
             <div class="mx-2 mb-4 px-4 rounded" id="contactItem">
+                <img class="contactImg rounded mt-3 justify-content-center" src="assets/images/social-media.jpg">
                 <h3 class="text-center">Social Media</h3>
                 <div class="row justify-content-center">
                     <p>Facebook: <a href="https://www.facebook.com/TrombonePhil92">Phillip Jones</a></p>
