--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <img class="contactImg rounded mt-3 justify-content-center" src="assets/images/document.png">
                 <h3 class="text-center">Resume</h3>
                 <div class="row justify-content-center">
-                    <p>Resume</p>
+                    <a href="https://drive.google.com/file/d/1Js-SI7e5ECCH9a2lwCdPOG_UVWmc8q38/view?usp=sharing">Professional Resume</a>
                 </div>
             </div>
             <div class="mx-2 mb-4 px-4 rounded" id="contactItem">
