Updated HTML rows and margins

--- a/index.html
+++ b/index.html
@@ -45,28 +45,37 @@
     <br>
     <div class="container bioDiv" id="bioDiv">
         <h2 class="text-center mb-3">Bio</h2>
-        <div class="col-12 border-top-secondary">
-            <img class="float-left mr-2 rounded" alt="Phillip Jones" id="profileImage" src="assets/images/Phillip_Jones.jpg">
-            <p class="bioText">My name is Phillip Jones and I live in Hendersonville, TN. I am a full
-                stack web developer currently enrolled in the Vanderbilt Coding Bootcamp. My passion for web development
-                has come from over a decade of music education where I learned a strong work ethic and creative problem
-                solving. My motivation to code comes from a strong desire for learning and the daily opportunities I will be presented with to grow.<br><br>
-                Prior to enrolling in the Vanderbilt Coding Bootcamp, I went to Middle Tennessee State University as a
-                Music Education Major and I am currently in my second full year as a Band Director. I am married to a wonderful wife who has supported me every step of this journey where I have discovered a strong, new passion.</p>
+        <div class="row">
+            <div class="col-12 border-top-secondary">
+                <img class="float-left mr-2 rounded" alt="Phillip Jones" id="profileImage"
+                    src="assets/images/Phillip_Jones.jpg">
+                <p class="bioText">My name is Phillip Jones and I live in Hendersonville, TN. I am a full
+                    stack web developer currently enrolled in the Vanderbilt Coding Bootcamp. My passion for web
+                    development
+                    has come from over a decade of music education where I learned a strong work ethic and creative
+                    problem
+                    solving. My motivation to code comes from a strong desire for learning and the daily opportunities I
+                    will be presented with to grow.<br><br>
+                    Prior to enrolling in the Vanderbilt Coding Bootcamp, I went to Middle Tennessee State University as
+                    a
+                    Music Education Major and I am currently in my second full year as a Band Director. I am married to
+                    a wonderful wife who has supported me every step of this journey where I have discovered a strong,
+                    new passion.</p>
                 <h4 class="text-center">Skills Include</h4>
-            <div class="row flex-row justify-content-center">
-                <ul>
-                    <li>HTML</li>
-                    <li>Animate.CSS</li>
-                </ul>
-                <ul>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                </ul>
-                <ul>
-                    <li>Bootstrap</li>
-                    <li>JQuery</li>
-                </ul>
+                <div class="row flex-row justify-content-center">
+                    <ul>
+                        <li>HTML</li>
+                        <li>Animate.CSS</li>
+                    </ul>
+                    <ul>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+                    <ul>
+                        <li>Bootstrap</li>
+                        <li>JQuery</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
@@ -134,10 +143,13 @@
                 <img class="contactImg rounded mt-3 justify-content-center" src="assets/images/social-media.jpg">
                 <h3 class="text-center">Social Media</h3>
                 <div class="row justify-content-center">
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/phillip-jones-4122a7156/">Phillip Jones</a></p>
+                </div>
+                <div class="row justify-content-center">
                     <p>Facebook: <a href="https://www.facebook.com/TrombonePhil92">Phillip Jones</a></p>
                 </div>
                 <div class="row justify-content-center">
-                    <p>LinkedIn: <a href="https://www.linkedin.com/in/phillip-jones-4122a7156/">Phillip Jones</a></p>
+                    <p>Twitter: <a href="https://twitter.com/TrombonePhil92">Phillip Jones</a></p>
                 </div>
             </div>
         </div>
