--- a/index.html
+++ b/index.html
@@ -47,34 +47,42 @@
         <h2 class="text-center mb-3">Bio</h2>
         <div class="row">
             <div class="col-12 border-top-secondary">
-                <img class="float-left mr-2 rounded" alt="Phillip Jones" id="profileImage"
-                    src="assets/images/Phillip_Jones.jpg">
-                <p class="bioText">My name is Phillip Jones and I live in Hendersonville, TN. I am a full
-                    stack web developer currently enrolled in the Vanderbilt Coding Bootcamp. My passion for web
-                    development
-                    has come from over a decade of music education where I learned a strong work ethic and creative
-                    problem
-                    solving. My motivation to code comes from a strong desire for learning and the daily opportunities I
-                    will be presented with to grow.<br><br>
-                    Prior to enrolling in the Vanderbilt Coding Bootcamp, I went to Middle Tennessee State University as
-                    a
-                    Music Education Major and I am currently in my second full year as a Band Director. I am married to
-                    a wonderful wife who has supported me every step of this journey where I have discovered a strong,
-                    new passion.</p>
-                <h4 class="text-center">Skills Include</h4>
-                <div class="row flex-row justify-content-center">
-                    <ul>
-                        <li>HTML</li>
-                        <li>Animate.CSS</li>
-                    </ul>
-                    <ul>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                    </ul>
-                    <ul>
-                        <li>Bootstrap</li>
-                        <li>JQuery</li>
-                    </ul>
+                <div class="col-12">
+                    <img class="float-left mr-2 rounded" alt="Phillip Jones" id="profileImage"
+                        src="assets/images/Phillip_Jones.jpg">
+                    <p class="bioText">My name is Phillip Jones and I live in Hendersonville, TN. I am a full
+                        stack web developer currently enrolled in the Vanderbilt Coding Bootcamp. My passion for web
+                        development
+                        has come from over a decade of music education where I learned a strong work ethic and creative
+                        problem
+                        solving. My motivation to code comes from a strong desire for learning and the daily
+                        opportunities I
+                        will be presented with to grow.<br><br>
+                        Prior to enrolling in the Vanderbilt Coding Bootcamp, I went to Middle Tennessee State
+                        University as
+                        a
+                        Music Education Major and I am currently in my second full year as a Band Director. I am married
+                        to
+                        a wonderful wife who has supported me every step of this journey where I have discovered a
+                        strong,
+                        new passion.</p>
+                </div>
+                <div class="col-12">
+                    <h4 class="text-center">Skills Include</h4>
+                    <div class="row flex-row justify-content-center">
+                        <ul>
+                            <li>HTML</li>
+                            <li>Animate.CSS</li>
+                        </ul>
+                        <ul>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                        </ul>
+                        <ul>
+                            <li>Bootstrap</li>
+                            <li>JQuery</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
