Added skills and fixed margins

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                         <ul>
                             <li>HTML</li>
                             <li>Animate.CSS</li>
+                            <li>Node.js</li>
                         </ul>
                         <ul>
                             <li>CSS</li>
